@@ -2,89 +2,48 @@ package net.mcreator.scpadditions.procedures;
 
 import net.minecraftforge.registries.ForgeRegistries;
 
-import net.minecraft.world.World;
-import net.minecraft.world.IWorld;
-import net.minecraft.util.text.StringTextComponent;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.AxisAlignedBB;
-import net.minecraft.util.SoundCategory;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.entity.Entity;
+import net.minecraft.world.phys.Vec3;
+import net.minecraft.world.phys.AABB;
+import net.minecraft.world.level.LevelAccessor;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.sounds.SoundSource;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.network.chat.Component;
+import net.minecraft.core.BlockPos;
 
-import net.mcreator.scpadditions.ScpAdditionsMod;
-
-import java.util.stream.Collectors;
-import java.util.function.Function;
-import java.util.Map;
 import java.util.List;
 import java.util.Comparator;
 
 public class Scp902ClosedUpdateTickProcedure {
-
-	public static void executeProcedure(Map<String, Object> dependencies) {
-		if (dependencies.get("world") == null) {
-			if (!dependencies.containsKey("world"))
-				ScpAdditionsMod.LOGGER.warn("Failed to load dependency world for procedure Scp902ClosedUpdateTick!");
-			return;
-		}
-		if (dependencies.get("x") == null) {
-			if (!dependencies.containsKey("x"))
-				ScpAdditionsMod.LOGGER.warn("Failed to load dependency x for procedure Scp902ClosedUpdateTick!");
-			return;
-		}
-		if (dependencies.get("y") == null) {
-			if (!dependencies.containsKey("y"))
-				ScpAdditionsMod.LOGGER.warn("Failed to load dependency y for procedure Scp902ClosedUpdateTick!");
-			return;
-		}
-		if (dependencies.get("z") == null) {
-			if (!dependencies.containsKey("z"))
-				ScpAdditionsMod.LOGGER.warn("Failed to load dependency z for procedure Scp902ClosedUpdateTick!");
-			return;
-		}
-		IWorld world = (IWorld) dependencies.get("world");
-		double x = dependencies.get("x") instanceof Integer ? (int) dependencies.get("x") : (double) dependencies.get("x");
-		double y = dependencies.get("y") instanceof Integer ? (int) dependencies.get("y") : (double) dependencies.get("y");
-		double z = dependencies.get("z") instanceof Integer ? (int) dependencies.get("z") : (double) dependencies.get("z");
-		if (world instanceof World && !world.isRemote()) {
-			((World) world).playSound(null, new BlockPos(x, y, z),
-					(net.minecraft.util.SoundEvent) ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("scp_additions:scp902")),
-					SoundCategory.HOSTILE, (float) 1, (float) 1);
-		} else {
-			((World) world).playSound(x, y, z,
-					(net.minecraft.util.SoundEvent) ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("scp_additions:scp902")),
-					SoundCategory.HOSTILE, (float) 1, (float) 1, false);
+	public static void execute(LevelAccessor world, double x, double y, double z) {
+		if (world instanceof Level _level) {
+			if (!_level.isClientSide()) {
+				_level.playSound(null, BlockPos.containing(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("scp_additions:scp902")), SoundSource.HOSTILE, 1, 1);
+			} else {
+				_level.playLocalSound(x, y, z, ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("scp_additions:scp902")), SoundSource.HOSTILE, 1, 1, false);
+			}
 		}
 		{
-			List<Entity> _entfound = world
-					.getEntitiesWithinAABB(Entity.class,
-							new AxisAlignedBB(x - (5 / 2d), y - (5 / 2d), z - (5 / 2d), x + (5 / 2d), y + (5 / 2d), z + (5 / 2d)), null)
-					.stream().sorted(new Object() {
-						Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
-							return Comparator.comparing((Function<Entity, Double>) (_entcnd -> _entcnd.getDistanceSq(_x, _y, _z)));
-						}
-					}.compareDistOf(x, y, z)).collect(Collectors.toList());
+			final Vec3 _center = new Vec3(x, y, z);
+			List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 			for (Entity entityiterator : _entfound) {
 				if (Math.random() < 0.01) {
-					if (entityiterator instanceof PlayerEntity && !entityiterator.world.isRemote()) {
-						((PlayerEntity) entityiterator).sendStatusMessage(new StringTextComponent("What is this sound?"), (true));
-					}
+					if (entityiterator instanceof Player _player && !_player.level().isClientSide())
+						_player.displayClientMessage(Component.literal("What is this sound?"), true);
 				}
 				if (Math.random() < 0.01) {
-					if (entityiterator instanceof PlayerEntity && !entityiterator.world.isRemote()) {
-						((PlayerEntity) entityiterator).sendStatusMessage(new StringTextComponent("Where is this ticking coming from?"), (true));
-					}
+					if (entityiterator instanceof Player _player && !_player.level().isClientSide())
+						_player.displayClientMessage(Component.literal("Where is this ticking coming from?"), true);
 				}
 				if (Math.random() < 0.01) {
-					if (entityiterator instanceof PlayerEntity && !entityiterator.world.isRemote()) {
-						((PlayerEntity) entityiterator).sendStatusMessage(new StringTextComponent("What's inside this box?"), (true));
-					}
+					if (entityiterator instanceof Player _player && !_player.level().isClientSide())
+						_player.displayClientMessage(Component.literal("What's inside this box?"), true);
 				}
 				if (Math.random() < 0.01) {
-					if (entityiterator instanceof PlayerEntity && !entityiterator.world.isRemote()) {
-						((PlayerEntity) entityiterator).sendStatusMessage(new StringTextComponent("Where is the noise coming from?"), (true));
-					}
+					if (entityiterator instanceof Player _player && !_player.level().isClientSide())
+						_player.displayClientMessage(Component.literal("Where is the noise coming from?"), true);
 				}
 			}
 		}
